[package]
name = "derive_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[features]
default = ["ts-rs", "serde", "derive_builder"]
juniper-input-type = []
[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.derive_builder]
optional = true
version = "0.10.2"
[dependencies.ts-rs]
version = "6.1"
optional = true
features = [
         "chrono-impl",
         "bigdecimal-impl",
         "uuid-impl",
         "bytes-impl",
         "serde-compat",
         "format",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
